[tool.poetry]
name = "when2meet"
version = "0.1.0"
description = ""
authors = ["한성진 <kinesis141@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"


[tool.poetry.group.dev.dependencies]
black ="25.1.0"
ruff = "0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"
